--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "morgan": "~1.7.0",
     "node-sass": "^4.5.2",
     "react": "^0.14.6",
+    "react-addons-css-transition-group": "^15.5.2",
     "react-dom": "^0.14.6",
     "sass-loader": "^6.0.3",
     "serve-favicon": "~2.3.2",
